Opis projekta v datotekah README in projekt.

--- a/projekt.Rmd
+++ b/projekt.Rmd
@@ -21,7 +21,7 @@ source("lib/libraries.r", encoding = "UTF-8")
 
 # Izbira teme
 
-Za vzorec bomo prikazali nekaj podatkov o slovenskih občinah.
+Izbral sem si temo preseljevanja prebivalcev v Evropi. V projektu bom analiziral preseljevanje prebivalstva v Evropi. Zbral bom podatke (nekaterih) evropskih držav za obdobje med letoma 2004 in 2015 glede na državljanstvo in glede na starostno skupino prebivalstva. Analiziral in predstavil bom kako se je spreminjalo število priseljenih in odseljenih v teh državah glede na omenjene kategorije.
 
 ***
 
