--- a/projekt.Rmd
+++ b/projekt.Rmd
@@ -26,34 +26,37 @@ ANALIZA PRESELJEVANJA V EVROPI
 V projektu bom analiziral preseljevanje prebivalstva v Evropi. Zbral bom podatke (nekaterih) evropskih držav za obdobje med letoma 2008 in 2015 glede na državljanstvo, spol in glede na starostno skupino priseljenega prebivalstva. Analiziral in predstavil bom, kako se je spreminjalo število priseljenih v teh državah glede na omenjene kategorije in primerjal število priseljenih ljudi s številom pridobljenih državljanstev in prošenj za azil za določene skupine ljudi.
 
 V prvi tabeli bom meril število priseljenih. Stolpci bodo:
-* država
 * leto
-* spol
-* starostna skupina
+* država
 * državljanstvo
+* spol
 * število priseljencev.
 
 V drugi tabeli bom meril število pridobljenih državljanstev. Stolpci bodo:
-* država
 * leto
-* spol
-* starostna skupina
+* država
 * državljanstvo
+* spol
 * število pridobljenih državljanstev.
 
-V tretji tabeli bom meril število prošenj za azil. Stolpci bodo:
-* država
+V tretji tabeli bom meril število azilantov. Stolpci bodo:
 * leto
-* državljanstvo
-* število prošenj za azil.
+* država
+* število azilantov.
+
+V četrti tabeli bom meril število prijavljenih beguncev. Stolpci bodo:
+* leto
+* država
+* število prijavljenih beguncev.
 
 Viri podatkov:
 
 * `http://ec.europa.eu/eurostat/web/population-demography-migration-projections/migration-and-citizenship-data/database`
 * `http://www.pewglobal.org/2016/08/02/number-of-refugees-to-europe-surges-to-record-1-3-million-in-2015/`
 * `http://www.economist.com/blogs/graphicdetail/2016/03/daily-chart-20`
+* `https://en.wikipedia.org/wiki/List_of_countries_by_refugee_population`
 
-Podatki bodo v CSV (prvi vir) in HTML (drugi in tretji vir) obliki.
+Podatki bodo v CSV (prvi vir) in HTML (drugi, tretji in četrti vir) obliki.
 
 ***
 
@@ -63,19 +66,11 @@ Podatki bodo v CSV (prvi vir) in HTML (drugi in tretji vir) obliki.
 source("uvoz/uvoz.r", encoding = "UTF-8")
 ```
 
-Uvozili smo podatke o občinah v obliki CSV s statističnega urada ter v obliki HTML
-z Wikipedije. Poglejmo si začetka obeh uvoženih razpredelnic.
+Uvozil sem podatke o priseljenih ljudi z Eurostata v obliki CSV in z Wikipedije v obliki HTML. Spodaj si lahko ogledamo začetek razpredelnice v kateri merimo število pridobljenih državljanstev in začetek tabele v kateri merimo število azilantov po državah.
 
 ```{r razpredelnice}
-kable(head(druzine))
-head(obcine)
-```
-
-Slika \ref{fig:histogram} prikazuje porazdelitev števila naselij v občinah.
-
-```{r histogram, echo=FALSE, message=FALSE, fig.align='center', fig.cap='Histogram števila naselij v občinah'}
-ggplot(obcine, aes(x = naselja)) + geom_histogram() +
-  ggtitle("Pogostost števila naselij") + xlab("Število naselij") + ylab("Število občin")
+head(drzavljanstva)
+head(azil)
 ```
 
 ***
