--- a/projekt.Rmd
+++ b/projekt.Rmd
@@ -25,38 +25,48 @@ ANALIZA PRESELJEVANJA V EVROPI
 
 V projektu bom analiziral preseljevanje prebivalstva v Evropi. Zbral bom podatke (nekaterih) evropskih držav za obdobje med letoma 2008 in 2015 glede na državljanstvo, spol in glede na starostno skupino priseljenega prebivalstva. Analiziral in predstavil bom, kako se je spreminjalo število priseljenih v teh državah glede na omenjene kategorije in primerjal število priseljenih ljudi s številom pridobljenih državljanstev in prošenj za azil za določene skupine ljudi.
 
-V prvi tabeli bom meril število priseljenih. Stolpci bodo:
+V prvi in tretji in drugi in četrti tabeli so meritve iste, razlika je le v tem, da so v prvih dveh podatki za evropske države, v drugih dveh pa podatki za afriške in azijske države.
+
+V prvi tabeli bom meril število priseljenih (iz evrope). Stolpci bodo:
 * leto
 * država
 * državljanstvo
 * spol
 * število priseljencev.
 
-V drugi tabeli bom meril število pridobljenih državljanstev. Stolpci bodo:
+V drugi tabeli bom meril število pridobljenih državljanstev (iz evrope). Stolpci bodo:
 * leto
 * država
 * državljanstvo
 * spol
 * število pridobljenih državljanstev.
 
-V tretji tabeli bom meril število azilantov. Stolpci bodo:
+V tretji tabeli bom meril število priseljenih (iz afrike in azije). Stolpci bodo:
 * leto
 * država
-* število azilantov.
+* državljanstvo
+* spol
+* število priseljencev.
 
-V četrti tabeli bom meril število prijavljenih beguncev. Stolpci bodo:
+V četrti tabeli bom meril število pridobljenih državljanstev (iz afrike in azije). Stolpci bodo:
 * leto
 * država
-* število prijavljenih beguncev.
+* državljanstvo
+* spol
+* število pridobljenih državljanstev.
+
+V peti tabeli bom meril število prošenj za azil. Stolpci bodo:
+* leto
+* država
+* število prošenj za azil.
+
 
 Viri podatkov:
 
-* `http://ec.europa.eu/eurostat/web/population-demography-migration-projections/migration-and-citizenship-data/database`
-* `http://www.pewglobal.org/2016/08/02/number-of-refugees-to-europe-surges-to-record-1-3-million-in-2015/`
-* `http://www.economist.com/blogs/graphicdetail/2016/03/daily-chart-20`
-* `https://en.wikipedia.org/wiki/List_of_countries_by_refugee_population`
+* http://ec.europa.eu/eurostat/web/population-demography-migration-projections/migration-and-citizenship-data/database
+* http://www.pewglobal.org/2016/08/02/number-of-refugees-to-europe-surges-to-record-1-3-million-in-2015/
 
-Podatki bodo v CSV (prvi vir) in HTML (drugi, tretji in četrti vir) obliki.
+Podatki bodo v CSV (prvi vir) in HTML (drugi vir) obliki.
 
 ***
 
@@ -66,7 +76,7 @@ Podatki bodo v CSV (prvi vir) in HTML (drugi, tretji in četrti vir) obliki.
 source("uvoz/uvoz.r", encoding = "UTF-8")
 ```
 
-Uvozil sem podatke o priseljenih ljudi z Eurostata v obliki CSV in z Wikipedije v obliki HTML. Spodaj si lahko ogledamo začetek razpredelnice v kateri merimo število pridobljenih državljanstev in začetek tabele v kateri merimo število azilantov po državah.
+Uvozil sem podatke o priseljenih ljudi z Eurostata v obliki CSV in z omenjene spletne strani v obliki HTML. Spodaj si lahko ogledamo začetek razpredelnice v kateri merimo število pridobljenih državljanstev in začetek tabele v kateri merimo število prošenj za azil po državah.
 
 ```{r razpredelnice}
 kable(head(drzavljanstva))
@@ -74,3 +84,25 @@ kable(head(azil))
 ```
 
 ***
+
+# Analiza in vizualizacija podatkov
+
+```{r vizualizacija, echo=FALSE, message=FALSE}
+source("vizualizacija/vizualizacija.r", encoding = "UTF-8")
+```
+
+Na zemljevidu Evrope bom predstavil drzavljanstva ljudi, ki so se priseljevala v Italijo
+
+Na zemljevidu Evrope, Azije in Afrike pa bom predstavil iz katerih drzav Afrike in Azije so se najvec preseljevali v Evropo in v katerih evropskih drzavah je bilo najvec prosenj za azil.
+
+V črtnem grafu sem predstavil število priseljenih ljudi za Slovenijo, Veliko Britanijo, Španijo in Italijo. Tu sem gledal le ljudi iz evropskih držav.
+
+```{r graf1}
+graf1
+```
+
+V stolpičnem grafu pa sem predstavil državljanstva ljudi, ki so se največ priseljevali v Veliko Britanijo. Tudi tu sem se omejil le na državljane evropskih držav.
+
+```{r graf2}
+grafuk
+```
