--- a/projekt.Rmd
+++ b/projekt.Rmd
@@ -83,9 +83,8 @@ source("uvoz/uvoz.r", encoding = "UTF-8")
 
 Uvozil sem podatke o priseljenih ljudi z Eurostata v obliki CSV in z omenjene spletne strani v obliki HTML. Spodaj si lahko ogledamo začetek razpredelnice v kateri merimo število pridobljenih državljanstev in začetek tabele v kateri merimo število prošenj za azil po državah.
 
-```{r razpredelnice}
-kable(head(drzavljanstva))
-kable(head(azil))
+```{r razpredelnice,echo = FALSE, warning = FALSE}
+kable(head(azil.pri))
 ```
 
 ***
@@ -126,6 +125,27 @@ print(graf2)
 
 Iz spletne strani pa sem dobil podatke o prošnjah za azil v evropskih državah. Na vrhu najdemo že stare znance.
 
-```{r nc}
+```{r nc,echo = FALSE, warning = FALSE}
 kable(head(max5.azil))
+```
+
+Za napoved priseljevanja ljudi v prihodnosti sem si drznil osredotočiti se na Španijo. V prvem grafu vidimo, da bi njeno krivuljo lahko lepo aproksimirali s kvafratno funkcijo. Podobno obliko imajo tudi podatki prošenj za azil za Španijo.
+
+```{r grafpredik,echo = FALSE, warning = FALSE}
+print(grafpredik)
+```
+
+V letu 2020 naj bi se število priseljenih ljudi v to državo povečalo na okrog 192000, kar je več kot 3-krat več od leta 2015. Take dogodke je težko napovedovati za daljše časovno obdobje. Lahko pa si mislimo, da si bo Španija še bolj opomogla od gospodarske krize (vemo da je imela nemalo težav), in se bo število priseljenih v prihajajočih letih res povečalo. Mogoče pa je bilo leto 2015 le izjema, ki je obrnilo krivuljo navzgor in ji dalo obliko kvadratne funkcije, in bi bilo bolje aproksimirati z linearno funkcijo, kjer bi dobili padajočo krivuljo. Vsekakor bo zanimivo videti podatke za 2016 in spremljati kaj se bo dejansko zgodilo v prihodnjih letih.
+
+```{r ggg,echo = FALSE, warning = FALSE}
+kable(head(l))
+```
+
+```{r graf2020,echo = FALSE, warning = FALSE}
+print(graf2020)
+```
+
+
+```{r shiny, echo = FALSE}
+shinyAppDir("shiny", options=list(width="100%", height=800))
 ```
